tests/invalid/missing_cpp_header_std_import.wio
use std::testing::missing_cpp_header;

fn Entry() -> i32 {
    return 0;
}
